--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -16,20 +16,21 @@
     {% include footer.html %}
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollzer.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
+		<script async src="assets/js/jquery.min.js"></script>
+		<script async src="assets/js/d3.min.js"></script>
+		<script async src="assets/js/ui.js"></script>
+		<script async src="assets/js/bootstrap.min.js"></script>
+    <script async src="assets/js/jquery.scrollzer.min.js"></script>
+    <script async src="assets/js/jquery.scrolly.min.js"></script>
+    <script async src="assets/js/skel.min.js"></script>
+    <script async src="assets/js/util.js"></script>
     <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/ui.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/d3.min.js"></script>
+    <script async src="assets/js/main.js"></script>
 
     <script>
-        // Opt in the popovers
-        $("[data-toggle=popover]").popover();
+		// Opt in the popovers
+		$( window ).load(function(){ $("[data-toggle=popover]").popover(); });
+
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 
